--- a/css/styles.css
+++ b/css/styles.css
@@ -47,3 +47,20 @@ h1 {
   width: 60%;
   transform: rotate(25deg);
 }
+
+/* Features */
+.feature-container{
+  text-align: center;
+}
+.feature-title{
+  font-family:"Montserrat";
+  font-size:1.5rem;
+}
+.feature-desc{
+  color: #8f8f8f;
+
+}
+.feature-icon{
+  height:10px;
+  width:10px;
+}
