--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@ h1 {
   font-size: 3.0rem;
   line-height: 1.5;
 }
+h2{
+  font-family: "Montserrat";
+  font-size: 3rem;
+  line-height: 1.5;
+}
 
 .container-fluid {
   padding: 3% 15%;
@@ -70,4 +75,30 @@ h1 {
 }
 .icon:hover{
    color: #ff4c68;
+}
+
+
+/* Testimonials */
+#testimonials{
+  padding: 7% 15%;
+  text-align: center;
+  background-color:#ef8172;
+  color:#fff;
+}
+.testimonial-image{
+  width:10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+
+/* Press Section */
+#press{
+  background-color:#ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+.press-logo{
+width: 15%;
+margin: 20px 20px 50px;
 }
