--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,8 @@ h1 {
 }
 h2{
   font-family: "Montserrat";
-  font-size: 3rem;
-  line-height: 1.5;
+  font-size: 3.5rem;
+  line-height: 1.2;
 }
 
 .container-fluid {
@@ -80,7 +80,7 @@ h2{
 
 /* Testimonials */
 #testimonials{
-  padding: 7% 15%;
+
   text-align: center;
   background-color:#ef8172;
   color:#fff;
@@ -89,6 +89,10 @@ h2{
   width:10%;
   border-radius: 100%;
   margin: 20px;
+  padding: 10px;
+}
+.carousel-item{
+   padding: 7% 15%;
 }
 
 
@@ -100,5 +104,5 @@ h2{
 }
 .press-logo{
 width: 15%;
-margin: 20px 20px 50px;
+margin: 10px 20px 20px;
 }
