--- a/css/styles.css
+++ b/css/styles.css
@@ -106,3 +106,13 @@ h2{
 width: 15%;
 margin: 10px 20px 20px;
 }
+
+
+/* Pricnig Section */
+#pricing{
+   padding: 100px;
+   text-align: center;
+}
+.pricing-column{
+  padding: 3% 2%;
+}
