--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,8 @@ h2{
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
+
 }
 
 /* Navigation Bar */
@@ -51,11 +52,16 @@ h2{
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+
 }
 
 /* Features */
 #features{
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 .feature-title{
   font-family:"Montserrat";
