--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@ h2{
   font-size: 3.5rem;
   line-height: 1.2;
 }
+h3{
+  font-family: "Montserrat";
+}
 
 .container-fluid {
   padding: 3% 15% 7%;
@@ -121,4 +124,46 @@ margin: 10px 20px 20px;
 }
 .pricing-column{
   padding: 3% 2%;
+}
+
+
+@media(max-width: 1028px){
+  #title{
+    text-align: center;
+  }
+  .title-image{
+    position: static;
+    transform: rotate(0);
+
+  }
+}
+
+/* Call to Action */
+#cta{
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 7% 15%;
+}
+.cta-heading{
+    font-family: "Montserrat";
+    color: #fff;
+    font-size: 3.5rem;
+    line-height: 1.5;
+
+}
+.cta-button{
+  margin: 5% 2%;
+}
+
+/* Footer */
+#footer{
+  text-align: center;
+  padding: 7% 15%;
+}
+.footer-icon{
+  margin: 20px 10px;
+}
+.footer-desc{
+  color: #8f8f8f;
+
 }
